<resources>
    <!-- App/Activity -->
    <string name="app_name">Urbano</string>
    <string name="title_activity_maps">Mapa</string>

    <!-- Inputs -->
    <string name="edit_name">Nome</string>
    <string name="edit_email">Email</string>
    <string name="edit_password">Senha</string>

    <!-- SignIn -->
    <string name="titulo_logar">Realize seu login! </string>
    <string name="btn_login">Login</string>
    <string name="btn_realizar_cadastro">Cadastre-se</string> <!-- Navega para a tela de cadastro -->
    <string name="sem_cadastro">Ainda não é cadastrado?</string>

    <!-- SignUp -->
    <string name="titulo_cadastrar">Realize seu cadastro! </string>
    <string name="btn_cadastro">Cadastrar</string>
    <string name="btn_realizar_login">Realize seu login</string>
    <string name="ja_possui_conta">Se você já possui uma conta</string>
    <string name="CPF">CPF</string>

    <string name="enviar">Enviar comentário</string>


    <!-- Home -->
    <string name="btn_deslogar">Deslogar</string>

    <!-- CardDenuncia -->
    <string name="btn_curtir">Curtir</string>
    <string name="btn_comentar">Comentar</string>

    <string name="titulo_label">Titulo</string>
    <string name="descricao_label">Descrição:</string>
    <string name="adicionar_denuncia_btn">Adicionar Denúncia</string>
    <string name="cancelar_btn">Voltar</string>
    <string name="titulo_denuncia">Titulo Denuncia</string>
    <string name="latitude_denuncia">Latitude</string>
    <string name="longitude_denuncia">Latitude</string>
    <string name="descricao_denuncia">Descricao Denuncia</string>
    <string name="qtd_curtidas">curtidas</string>
    <string name="qtd_comentarios">comentarios</string>
    <string name="goToMapa">Adicionar localização</string>
    <string name="escolher">Escolher</string>
    <string name="imagem_label">Imagem:</string>
    <string name="tirar_foto">Adicionar foto</string>

    <string name="titulo_comentario">Comentarios</string>

    <string name="comentario">Escreva um comentário...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
