<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label_titulo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/titulo_label"/>

    <EditText
        android:id="@+id/titulo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"/>

    <TextView
        android:id="@+id/label_descricao"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/descricao_label"/>

    <EditText
        android:id="@+id/descricao"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:maxLines="4"
        />

    <TextView
        android:id="@+id/label_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latitude_denuncia"/>
    <EditText
        android:id="@+id/latitudeDenuncia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"/>

    <TextView
        android:id="@+id/label_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longitude_denuncia"
        />
    <EditText
        android:id="@+id/longitudeDenuncia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_mapa"
        android:onClick="btnGoToMap"
        android:text="@string/goToMapa" />


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_adc_nova_denuncia"
        android:text="@string/adicionar_denuncia_btn"
        android:layout_marginRight="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cancelar"
        android:layout_marginLeft="10dp"
        android:text="@string/cancelar_btn" />


</LinearLayout>


</LinearLayout>