<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="297dp"
        android:minHeight="200dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/titulo_denuncia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/titulo_denuncia" />

            <TextView
                android:id="@+id/info_local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_below="@id/titulo_denuncia"
                android:text="@string/local_denuncia"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/foto"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/info_local"
                android:layout_marginTop="10dp"
                android:background="@color/cinza"/>

            <TextView
                android:id="@+id/curtidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/foto"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/qtd_curtidas" />

            <TextView
                android:id="@+id/comentarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/foto"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/curtidas"
                android:text="@string/qtd_comentarios" />

            <Button
                android:id="@+id/btn_curtir"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/comentarios"
                android:layout_marginTop="10dp"
                android:text="@string/btn_curtir" />

            <Button
                android:id="@+id/btn_comentar"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/comentarios"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/btn_curtir"
                android:text="@string/btn_comentar"/>



        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>