<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.PerfilFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_adcDenuncia"
            android:text="@string/adicionar_denuncia_btn"
            android:layout_below="@id/btn_sair"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:onClick="adicionarNovaDenuncia"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mapa_btn"
            android:text="@string/title_activity_maps"
            android:layout_below="@id/btn_sair"
            android:layout_marginBottom="5dp"
            android:onClick="buttonMapsClick"/>


        <Button
            android:id="@+id/btn_sair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonSignOutClick"
            android:text="@string/btn_deslogar" />

        </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>