<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/denuncia_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/titulo_denuncia" />

                <TextView
                    android:id="@+id/info_local"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_below="@id/denuncia_titulo"
                    android:text="@string/local_denuncia"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/foto"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@id/info_local"
                    android:layout_marginTop="10dp"
                    android:background="@color/cinza"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/curtidas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:text="@string/qtd_curtidas" />

                    <TextView
                        android:id="@+id/comentarios"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_toRightOf="@+id/curtidas"
                        android:text="@string/qtd_comentarios" />

                </RelativeLayout>



                <Button
                    android:id="@+id/btn_curtir"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/btn_curtir" />

                <!--Button
                    android:id="@+id/btn_comentar"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comentarios"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/btn_curtir"
                    android:text="@string/btn_comentar"/-->

                <TextView
                    android:id="@+id/nome_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_below="@id/btn_curtir"
                    android:layout_marginTop="10dp"
                    android:text="Nome Usuario" />

                <EditText
                    android:id="@+id/comentario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comentario"
                    android:inputType="text" />


                <Button
                    android:id="@+id/btn_enviar_comentario"
                    android:layout_width="190dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/comentario"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:onClick="realizarComentarario"
                    android:text="@string/enviar" />

                <TextView
                    android:id="@+id/comentario_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/titulo_comentario" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lista_comentarios"
                    android:layout_marginTop="10dp">


                </ListView>


            </LinearLayout>




    </ScrollView>




</LinearLayout>




