<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Seja bem vindo"
        android:id="@+id/txt_welcome"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_goToMaps"
        android:text="Mapa"
        android:onClick="buttonMapsClick"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="297dp"
        android:minHeight="200dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titulo_denuncia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="Titulo Denuncia" />

            <TextView
                android:id="@+id/info_local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_below="@id/titulo_denuncia"
                android:text="Localidade Denuncia"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/foto"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/info_local"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/curtidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/foto"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:text="5 curtidas" />

            <TextView
                android:id="@+id/comentarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/foto"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/curtidas"
                android:text="5 comentários" />

            <Button
                android:id="@+id/btn_curtir"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/comentarios"
                android:layout_marginTop="10dp"
                android:text="@string/btn_curtir" />

            <Button
                android:id="@+id/btn_comentar"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/comentarios"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/btn_curtir"
                android:text="@string/btn_comentar" />




        </RelativeLayout>

    </androidx.cardview.widget.CardView>



    <Button
        android:id="@+id/btn_sair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonSignOutClick"
        android:text="@string/btn_deslogar" />


</LinearLayout>